--- a/Pagina4.html
+++ b/Pagina4.html
@@ -25,7 +25,14 @@
     </div>
     <div class="Parrafos">
         <div>Por que son importantes</div>
-        <div>Parrafo 1</div>
+        <div>
+            Las energías ventajas de las energias renovables son: 
+            <ol>
+                <li>Al no producir gases de efecto invernadero (GEI) no contribuyen al calentamiento global y por eso es el origen para la reducción del CO2.</li> 
+                <li>Además ayudan a garantizar un buen futuro a las nuevas generaciones</li>
+                <li>Son una fuente inagotable de energía</li>
+            </ol>
+        </div>
         <div>Parrafo 2</div>
         <div>Parrafo 3</div>
     </div>
