--- a/Pagina3-1.html
+++ b/Pagina3-1.html
@@ -24,9 +24,15 @@
         <a href="Pagina6.html">Pagina 6</a>
     </div>
     <div class="Parrafos">
-        <div>Ejemplo 1</div>
-        <div>Parrafo 1</div>
-        <div>Parrafo 2</div>
+        <div>La fotosíntesis como fuente de energía</div>
+        <div>La base de este nuevo tipo de energía renovable se basa en producir energía de la fotosintesis de las plantas. 
+            La idea es crear un sistema eléctrico ecológico que obtenga energía directamente de las plantas. Una de las pioneras en este ámbito es 
+            la empresa belga Plant-e. Han desarrollado un sistema capaz de generar electricidad sin dañar las plantas. 
+        </div>
+        <div>Funciona mediante un circuito de cubetas con agua que se instalan bajo la planta, donde unos electrodos capturan los electrones liberados por los microorganismos expulsados 
+            a tierra por la planta. El rendimiento del sistema es bajo, ya que se necesita un metro cuadrado de plantas para generar 0.4 watts. 
+            Es decir, para abastecer de energía una casa que consuma unos 2.900 kWh al año serían necesarios 100 m2 de Plant-e.
+        </div>
         <div>Parrafo 3</div>
     </div>
     <div class="enlaces">Enlaces</div>
