--- a/Pagina3-2.html
+++ b/Pagina3-2.html
@@ -24,8 +24,10 @@
         <a href="Pagina6.html">Pagina 6</a>
     </div>
     <div class="Parrafos">
-        <div>Ejemplo 2</div>
-        <div>Parrafo 1</div>
+        <div>Mini centrales eólicas voladoras</div>
+        <div>En este caso, hablamos de un tipo de energía renovable más convencional, como es la cólica, pero llevada a una nueva dimensión: la aérea. 
+            La novedad aquí es la ubicación y el diseño de los aerogeneradores. En lugar de enormes molinos eólicos anclados en tierra, hablamos de pequeñas 
+            turbinas voladoras-de tipo dron o globo aerostático- situadas a una altura de unos 2km para aprovechar mejor las corrientes de aire.</div>
         <div>Parrafo 2</div>
         <div>Parrafo 3</div>
     </div>
