--- a/Pagina3-2.html
+++ b/Pagina3-2.html
@@ -27,8 +27,14 @@
         <div>Mini centrales eólicas voladoras</div>
         <div>En este caso, hablamos de un tipo de energía renovable más convencional, como es la cólica, pero llevada a una nueva dimensión: la aérea. 
             La novedad aquí es la ubicación y el diseño de los aerogeneradores. En lugar de enormes molinos eólicos anclados en tierra, hablamos de pequeñas 
-            turbinas voladoras-de tipo dron o globo aerostático- situadas a una altura de unos 2km para aprovechar mejor las corrientes de aire.</div>
-        <div>Parrafo 2</div>
+            turbinas voladoras-de tipo dron o globo aerostático- situadas a una altura de unos 2km para aprovechar mejor las corrientes de aire.
+        </div>
+        
+        <div>Según calculan los expertos, los vientos en este rango de altura son hasta 20 veces más potentes que los que captan los aerogeneradores 
+            convencionales. Estas mini centrales eólicas podrían transferir la electricidad a través de nanotubos o bien, de forma inalámbrica. 
+            El potencial de esta tecnología es muy grande siempre que se puedan salvar las restricciones del espacio aéreo para no interferir con el 
+            tráfico de aviones.
+        </div>
         <div>Parrafo 3</div>
     </div>
     <div class="enlaces">Enlaces</div>
