--- a/Pagina2.html
+++ b/Pagina2.html
@@ -25,8 +25,10 @@
     </div>
     <div>Acceso a la energía</div>
     <div class="Parrafos">
-        <div>Parrafo 1</div>
-        <div>Parrafo 2</div>
+        <div>Es la disponibilidad física de servicios modernos de energía para satisfacer las necesidades humanas básicas, a costos asequibles y que incluyen la electricidad y artefactos mejorados como las estufas para cocinar. 
+            Estos servicios energéticos deben ser fiables, sostenibles y, de ser posible, producto de la energía renovable u otras fuentes energéticas con bajo nivel de emisiones de carbono.</div>
+        <div>El acceso a la energía, en particular a la energía sostenible, está inseparable de un futuro sostenible para el mundo en desarrollo. 
+            El acceso a la energía también</div>
         <div>Parrafo 3</div>
     </div>
     <div class="enlaces">Enlaces</div>
