--- a/Pagina2.html
+++ b/Pagina2.html
@@ -28,7 +28,14 @@
         <div>Es la disponibilidad física de servicios modernos de energía para satisfacer las necesidades humanas básicas, a costos asequibles y que incluyen la electricidad y artefactos mejorados como las estufas para cocinar. 
             Estos servicios energéticos deben ser fiables, sostenibles y, de ser posible, producto de la energía renovable u otras fuentes energéticas con bajo nivel de emisiones de carbono.</div>
         <div>El acceso a la energía, en particular a la energía sostenible, está inseparable de un futuro sostenible para el mundo en desarrollo. 
-            El acceso a la energía también</div>
+            El acceso a la energía también:
+            <ol>
+                <li>Posibilita la generación de ingresos, mediante el uso de bombas solares para la irrigación o electricidad para un pequeño negocio.</li>
+                <li>Brinda energía a centros de salud comunitarios.</li>
+                <li>Proporciona iluminación para que los niños puedan estudiar de noche.</li>
+                <li>Permite el funcionamiento de los negocios y crea nuevas oportunidades empresariales.</li>
+            </ol>
+        </div>
         <div>Parrafo 3</div>
     </div>
     <div class="enlaces">Enlaces</div>
