he cambiado el HTML

--- a/Pagina4.html
+++ b/Pagina4.html
@@ -34,7 +34,12 @@
             </ol>
         </div>
         <div>Parrafo 2</div>
-        <div>Parrafo 3</div>
+        <div>
+            El crecimiento de las energías renovables es imparable, como queda reflejado en las estadísticas aportadas anualmente por la Agencia 
+            Internacional de la Energía (AIE): Según las previsiones de la AIE, la participación de las renovables en el suministro eléctrico global pasará 
+            del 26% en 2018 al 44% en 2040, y proporcionarán 2/3 del incremento de demanda eléctrica registrado en ese período, principalmente a través de 
+            las tecnologías eólica y fotovoltaica.
+        </div>
     </div>
     <div class="enlaces">Enlaces</div>
 </body>
