--- a/Pagina2.html
+++ b/Pagina2.html
@@ -24,7 +24,7 @@
         <a href="Pagina6.html">Pagina 6</a>
     </div>
     <div>Acceso a la energía</div>
-    <div class="Parrafos">
+    <div class="Parrafos_2">
         <div>Es la disponibilidad física de servicios modernos de energía para satisfacer las necesidades humanas básicas, a costos asequibles y que incluyen la electricidad y artefactos mejorados como las estufas para cocinar. 
             Estos servicios energéticos deben ser fiables, sostenibles y, de ser posible, producto de la energía renovable u otras fuentes energéticas con bajo nivel de emisiones de carbono.</div>
         <div>El acceso a la energía, en particular a la energía sostenible, está inseparable de un futuro sostenible para el mundo en desarrollo. 
