--- a/Pagina4.html
+++ b/Pagina4.html
@@ -23,7 +23,7 @@
         <a href="Pagina5.html">Pagina 5</a>
         <a href="Pagina6.html">Pagina 6</a>
     </div>
-    <div class="Parrafos">
+    <div class="Parrafos_4">
         <div>Por que son importantes</div>
         <div>
             Las energías ventajas de las energias renovables son: 
@@ -33,7 +33,12 @@
                 <li>Son una fuente inagotable de energía</li>
             </ol>
         </div>
-        <div>Parrafo 2</div>
+
+        <div>La importancia de las energías renovables permiten visualizar cuáles son las ventajas de gozar de las mismas y desarrollarlas 
+            eficientemente. Tanto para la sociedad como para el planeta son un factor determinante para obtener mejores condiciones sanitarias 
+            y ambientales.
+        </div>
+
         <div>
             El crecimiento de las energías renovables es imparable, como queda reflejado en las estadísticas aportadas anualmente por la Agencia 
             Internacional de la Energía (AIE): Según las previsiones de la AIE, la participación de las renovables en el suministro eléctrico global pasará 
