--- a/Pagina2.html
+++ b/Pagina2.html
@@ -23,12 +23,12 @@
         <a href="Pagina5.html">Pagina 5</a>
         <a href="Pagina6.html">Pagina 6</a>
     </div>
-    <div>Acceso a la energía</div>
     <div class="Parrafos_2">
+        <div>Acceso a la energía</div>
+        <br>
         <div>Es la disponibilidad física de servicios modernos de energía para satisfacer las necesidades humanas básicas, a costos asequibles y que incluyen la electricidad y artefactos mejorados como las estufas para cocinar. 
             Estos servicios energéticos deben ser fiables, sostenibles y, de ser posible, producto de la energía renovable u otras fuentes energéticas con bajo nivel de emisiones de carbono.</div>
-        <div>El acceso a la energía, en particular a la energía sostenible, está inseparable de un futuro sostenible para el mundo en desarrollo. 
-            El acceso a la energía también:
+        <div>El acceso a la energía, en particular a la energía sostenible, está inseparable de un futuro sostenible para el mundo en desarrollo y también:
             <ol>
                 <li>Posibilita la generación de ingresos, mediante el uso de bombas solares para la irrigación o electricidad para un pequeño negocio.</li>
                 <li>Brinda energía a centros de salud comunitarios.</li>
