--- a/Pagina4.html
+++ b/Pagina4.html
@@ -45,6 +45,7 @@
             del 26% en 2018 al 44% en 2040, y proporcionarán 2/3 del incremento de demanda eléctrica registrado en ese período, principalmente a través de 
             las tecnologías eólica y fotovoltaica.
         </div>
+        <img src="Renovables_España.jpg">
     </div>
     <div class="enlaces">Enlaces</div>
 </body>
