--- a/Pagina4.html
+++ b/Pagina4.html
@@ -23,9 +23,10 @@
         <a href="Pagina5.html">Pagina 5</a>
         <a href="Pagina6.html">Pagina 6</a>
     </div>
+
+    <div class="enunciado_4">Por que son importantes</div>
     <div class="Parrafos_4">
-        <div>Por que son importantes</div>
-        <div>
+        <div class="Texto_4">
             Las energías ventajas de las energias renovables son: 
             <ol>
                 <li>Al no producir gases de efecto invernadero (GEI) no contribuyen al calentamiento global y por eso es el origen para la reducción del CO2.</li> 
@@ -34,18 +35,27 @@
             </ol>
         </div>
 
-        <div>La importancia de las energías renovables permiten visualizar cuáles son las ventajas de gozar de las mismas y desarrollarlas 
+        <div class="Texto_4">La importancia de las energías renovables permiten visualizar cuáles son las ventajas de gozar de las mismas y desarrollarlas 
             eficientemente. Tanto para la sociedad como para el planeta son un factor determinante para obtener mejores condiciones sanitarias 
             y ambientales.
         </div>
 
-        <div>
+        <div class="Texto_4">
             El crecimiento de las energías renovables es imparable, como queda reflejado en las estadísticas aportadas anualmente por la Agencia 
             Internacional de la Energía (AIE): Según las previsiones de la AIE, la participación de las renovables en el suministro eléctrico global pasará 
             del 26% en 2018 al 44% en 2040, y proporcionarán 2/3 del incremento de demanda eléctrica registrado en ese período, principalmente a través de 
             las tecnologías eólica y fotovoltaica.
         </div>
-        <img src="Evolucion.jpg">
+
+        <div class="Texto_4">
+            Además, si se diversificar las fuentes de energía, se reduce la vulnerabilidad a interrupciones o aumentos de precios en una sola fuente de energía. La dependencia de una sola fuente de energía puede ser 
+            una debilidad en términos de seguridad energética.
+        </div>
+
+        <div class="ev_energia">
+            <img src="Evolucion.jpg" class="img_1">
+            <img src="Grafica.svg" class="img_2">
+        </div>
     </div>
     <div class="enlaces">Enlaces</div>
 </body>
