--- a/Pagina6.html
+++ b/Pagina6.html
@@ -24,7 +24,7 @@
         <a href="Pagina6.html">Pagina 6</a>
     </div>
     <div class="Parrafos">
-        <div>Hola</div>
+        <div>Porque no utilizamos energias renovables</div>
         <div>Parrafo 1</div>
         <div>Parrafo 2</div>
         <div>Parrafo 3</div>
