--- a/Pagina6.html
+++ b/Pagina6.html
@@ -23,6 +23,7 @@
         <a href="Pagina5.html">Pagina 5</a>
         <a href="Pagina6.html">Pagina 6</a>
     </div>
+    <!-- Enlace: https://theobjective.com/further/medioambiente/2021-09-28/abastecemiento-solo-energias-renovables/-->
     <div class="Parrafos">
         <div>Porque no utilizamos energias renovables</div>
         <div>Parrafo 1</div>
