--- a/Pagina4.html
+++ b/Pagina4.html
@@ -27,15 +27,22 @@
     <div class="enunciado_4">Por que son importantes</div>
     <div class="Parrafos_4">
         <div class="Texto_4">
+            Antes de abordar el tema de por qué las energías renovables son importantes, es importante hacer una breve introducción al contexto actual de la energía. 
+            En la actualidad, la mayor parte de la energía utilizada en el mundo proviene de combustibles fósiles, como el petróleo, el gas natural y el carbón.
+        </div>
+        <div class="Texto_4">
             Las energías ventajas de las energias renovables son: 
             <ol>
-                <li>Al no producir gases de efecto invernadero (GEI) no contribuyen al calentamiento global y por eso es el origen para la reducción del CO2.</li> 
-                <li>Además ayudan a garantizar un buen futuro a las nuevas generaciones</li>
-                <li>Son una fuente inagotable de energía</li>
+                <li class="lista">Al no producir gases de efecto invernadero (GEI) no contribuyen al calentamiento global y por eso es el origen para la reducción del CO2.</li> 
+                <li class="lista">Además ayudan a garantizar un buen futuro a las nuevas generaciones</li>
+                <li class="lista">Son una fuente inagotable de energía</li>
+                <li class="lista">Tienen un impacto ambiental mucho menor que los combustibles fósiles</li>
+                <li class="lista">No requieren grandes extensiones de terreno para su instalación.</li>
+                <li>Mejoran la calidad del aire y la salud pública al reducir la contaminación y la emisión de partículas nocivas.</li>
             </ol>
         </div>
 
-        <div class="Texto_4">La importancia de las energías renovables permiten visualizar cuáles son las ventajas de gozar de las mismas y desarrollarlas 
+        <div class="Texto_4">La importancia de las energías renovables permite visualizar cuáles son las ventajas de gozar de las mismas y desarrollarlas 
             eficientemente. Tanto para la sociedad como para el planeta son un factor determinante para obtener mejores condiciones sanitarias 
             y ambientales.
         </div>
@@ -48,8 +55,28 @@
         </div>
 
         <div class="Texto_4">
-            Además, si se diversificar las fuentes de energía, se reduce la vulnerabilidad a interrupciones o aumentos de precios en una sola fuente de energía. La dependencia de una sola fuente de energía puede ser 
+            Además, si se diversifican las fuentes de energía, se reduce la vulnerabilidad a interrupciones o aumentos de precios en una sola fuente de energía. La dependencia de una sola fuente de energía puede ser 
             una debilidad en términos de seguridad energética.
+        </div>
+
+        <div class="Texto_4">
+            Es importante destacar que las energías renovables tienen un impacto positivo en la economía, ya que promueven el desarrollo de nuevas tecnologías y la creación de empleos en sectores relacionados con la generación y distribución de energía limpia. Las inversiones en energías renovables también atraen capitales extranjeros y mejoran la balance de pagos de los países que las desarrollan.
+        </div>
+
+        <div class="Texto_4">
+            <b>Impacto en la economía</b>
+        </div>
+
+        <div class="Texto_4">
+            Asimismo, los costos de las tecnologías renovables están disminuyendo constantemente, lo que las hace más accesibles y competitivas en comparación con los combustibles fósiles. Además, a diferencia de los combustibles fósiles que tienen precios volátiles y dependen de factores geopolíticos, las energías renovables son una fuente de energía más estable y predecible en términos de costos.
+        </div>
+
+        <div class="Texto_4">
+            Por otro lado, las energías renovables también ofrecen oportunidades de inversión a largo plazo, ya que los proyectos relacionados con energía limpia tienen una vida útil prolongada y una rentabilidad atractiva. En resumen, el desarrollo de las energías renovables es una oportunidad para mejorar la economía a nivel local, nacional e internacional.
+        </div>
+        
+        <div class="Texto_4">
+            En resumen, es importante discutir el papel de las energías renovables porque contribuyen a un futuro más sostenible y respetuoso con el medio ambiente.
         </div>
 
     </div>
