--- a/Pagina5.html
+++ b/Pagina5.html
@@ -24,10 +24,11 @@
         <a href="Pagina6.html">Pagina 6</a>
     </div>
     <div class="Parrafos">
-        <div>Energia segura</div>
-        <div>Parrafo 1</div>
-        <div>Parrafo 2</div>
-        <div>Parrafo 3</div>
+        <div class="enunciado_5">Energia segura</div>
+        <div class="texto5">La energía nuclear, la eólica, la hidroeléctrica y especialmente la solar, son las energías más seguras en términos de accidentes y contaminación atmosférica y son opciones de baja emisión de carbono.</div>
+        <div><img  class="n" src="en.webp" alt=""></div>
+        <div><img class="e" src="ee.jpg" alt=""></div>
+        <div><img class="he" src="ehe.webp" alt=""></div>
     </div>
     <div class="enlaces">Enlaces</div>
 </body>
