--- a/Pagina6.html
+++ b/Pagina6.html
@@ -24,11 +24,44 @@
         <a href="Pagina6.html">Pagina 6</a>
     </div>
     <!-- Enlace: https://theobjective.com/further/medioambiente/2021-09-28/abastecemiento-solo-energias-renovables/-->
-    <div class="Parrafos">
-        <div>Porque no utilizamos energias renovables</div>
-        <div>Parrafo 1</div>
-        <div>Parrafo 2</div>
-        <div>Parrafo 3</div>
+    <div class="enunciado_4">¿Por qué no se utilizan más energías renovables?</div>
+    <div class="Parrafo_6">
+        <div class="Texto_6">Algunos expertos apuntan a que la culpa de que en España no utilizamos energías renovables es en parte por culpa de la crisis ya que aproximadamente el 67% de la energía de España viene del exterior , 
+            la falta de consenso político , el precio que cuesta montar las instalaciones y además los pocos incentivos para el autoconsumo de las mismas.</div>
+
+        <div class="Texto_6">
+            Una entrevista a Antonio Turiel y Jose Luis Rodríguez sobre este mismo tema nos contesta a esta pregunta . Sus respuesta fueron, "El mayor problema de las energías renovables es su inestabilidad" ya que al no provenir de ningún centro de producción  
+            y que entra y sale con inestabilidad y para que esto funcione hay que dotarla de estabilidad y esa estabilidad solo la suministran las centrales convencionales. 
+        </div>
+        
+        <div class="Texto_6">
+            <b>Fiabilidad</b>
+        </div>
+
+        <div class="Texto_6">
+            La fiabilidad es uno de los aspectos más importantes a considerar al elegir una fuente de energía. La energía renovable, como la energía solar y eólica, es una fuente de energía limpia y sostenible, pero presenta una desventaja importante en comparación 
+            con los combustibles fósiles: la intermitencia. La energía solar depende de la disponibilidad de luz solar, y la energía eólica depende de la velocidad del viento. Ambos son factores que varían constantemente y que pueden afectar la cantidad 
+            de energía producida.
+        </div>
+        
+        <div class="Texto_6">
+            Además, estos sistemas no pueden almacenar energía de manera eficiente, lo que significa que la energía renovable no está disponible cuando se necesita. Por lo tanto, a menudo se requiere una fuente de energía complementaria para asegurar 
+            la continuidad del suministro de energía.
+        </div>
+
+        <div class="Texto_6">
+            A pesar de estos desafíos, las tecnologías están avanzando rápidamente para mejorar la fiabilidad de la energía renovable. Se están desarrollando nuevos sistemas de almacenamiento de energía y tecnologías avanzadas de gestión de la red para 
+            mejorar la confiabilidad de la energía renovable. Con el tiempo, se espera que la energía renovable se convierta en una fuente más confiable de energía.
+        </div>
+
+        <div class="Texto_6">
+            Por eso según los expertos es necesario tener energía de respaldo,es decir, una energía que entre cuando tú ves que va a fallar o no va a entrar la suficiente de forma estable.
+        </div>
+
     </div>
-    <div class="enlaces">Enlaces</div>
+    <div class="enlaces">
+        <a href="https://www.appa.es/la-energia-en-espana/produccion-nacional-y-autoabastecimiento/" target="blank"><img src="Transportar.png" class="Transportar_logo"></a>
+        <a href="https://www.uoc.edu/portal/es/news/entrevistes/2022/032-antonio-turiel.html" target="_blank"><img src="Periodico.png" class="Periodico_logo"></a>
+        <a href="https://theconversation.com/aumentan-las-renovables-el-riesgo-de-apagones-en-la-red-electrica-179729" target="_blank"><img src="Fiabilidad.png" class="Fiabilidad_logo"></a>
+    </div>
 </body>
