--- a/Pagina1.html
+++ b/Pagina1.html
@@ -25,8 +25,16 @@
     </div>
     <div class="Parrafos">
         <div>Un futuro sin energias renovables</div>
-        <div>Parrafo 1</div>
-        <div>Parrafo 2</div>
+        <div>Las energías renovables son necesarias para nuestro futuro y bienestar, ya que la gran emisión de CO2 a la atmósfera es 
+            perjudicial tanto para nosotros como para el medio ambiente, un futuro sin energías renovables es inconcebible ya que los combustibles 
+            fósiles , gases y demás recursos extraídos de la tierra son finitos y algún día desaparecerán o serán tan caros y costosos de obtener 
+            que no tendrá sentido.</div>
+        <div>Las energías renovables ya son parte de nuestra vida ya que en 2020 un 40% de la energía que se consumía era de fuentes renovables. 
+            Y es posible un futuro con energías 100% renovables? Pues en cuanto a la viabilidad técnica y económica podríamos decir que sí ya que 
+            es técnicamente posible. Uniendo diferentes tipos de energía renovable, la más conveniente según el lugar donde estemos para así 
+            siempre poder tener producción. 
+        </div>
+        
         <div>Parrafo 3</div>
     </div>
     <div class="enlaces">Enlaces</div>
