--- a/Pagina1.html
+++ b/Pagina1.html
@@ -23,8 +23,9 @@
         <a href="Pagina5.html">Pagina 5</a>
         <a href="Pagina6.html">Pagina 6</a>
     </div>
+    <div class="enunciado_4">Un futuro sin energias renovables</div>
     <div class="Parrafos">
-        <div>Un futuro sin energias renovables</div>
+       
         <div>Las energías renovables son necesarias para nuestro futuro y bienestar, ya que la gran emisión de CO2 a la atmósfera es 
             perjudicial tanto para nosotros como para el medio ambiente, un futuro sin energías renovables es inconcebible ya que los combustibles 
             fósiles , gases y demás recursos extraídos de la tierra son finitos y algún día desaparecerán o serán tan caros y costosos de obtener 
