--- a/Pagina3.html
+++ b/Pagina3.html
@@ -23,8 +23,8 @@
         <a href="Pagina5.html">Pagina 5</a>
         <a href="Pagina6.html">Pagina 6</a>
     </div>
+    <div class="enunciado_4">Ósmosis o energía azul</div>
     <div class="Parrafos">
-        <div>Ósmosis o energía azul</div>
 
         <div>
             La energía osmótica o energía azul se basa, como su nombre indica, en la osmosis. Y para obtenerla, solo se necesita agua, sal y 
