--- a/Pagina3-1.html
+++ b/Pagina3-1.html
@@ -23,8 +23,11 @@
         <a href="Pagina5.html">Pagina 5</a>
         <a href="Pagina6.html">Pagina 6</a>
     </div>
+    
+    <div class="enunciado_4">La fotosíntesis como fuente de energía</div>
+    
     <div class="Parrafos">
-        <div>La fotosíntesis como fuente de energía</div>
+
         <div>La base de este nuevo tipo de energía renovable se basa en producir energía de la fotosintesis de las plantas. 
             La idea es crear un sistema eléctrico ecológico que obtenga energía directamente de las plantas. Una de las pioneras en este ámbito es 
             la empresa belga Plant-e. Han desarrollado un sistema capaz de generar electricidad sin dañar las plantas. 
