--- a/index.html
+++ b/index.html
@@ -58,5 +58,7 @@
             <img src="Contaminacion.gif" class="Contaminacion">
         </div>
     </div>
-    <div class="enlaces">Enlaces</div>
+    <div class="enlaces">
+        <a href="https://es.wikipedia.org/wiki/Energ%C3%ADa_renovable" target="blank"><img src="Wikipedia.png" class=Wikipedia_logo></a>
+    </div>
 </body>
