--- a/Pagina1.html
+++ b/Pagina1.html
@@ -24,7 +24,7 @@
         <a href="Pagina6.html">Pagina 6</a>
     </div>
     <div class="enunciado_4">Un futuro sin energias renovables</div>
-    <div class="Parrafos">
+    <div class="Parrafo_1">
        
         <div class="Texto_1">Las energías renovables son necesarias para nuestro futuro y bienestar, ya que la gran emisión de CO2 a la atmósfera es 
             perjudicial tanto para nosotros como para el medio ambiente, un futuro sin energías renovables es inconcebible ya que los combustibles 
