--- a/Pagina5.html
+++ b/Pagina5.html
@@ -25,7 +25,8 @@
     </div>
     <div class="Parrafos">
         <div class="enunciado_5">Energia segura</div>
-        <div class="texto5">La energía nuclear, la eólica, la hidroeléctrica y especialmente la solar, son las energías más seguras en términos de accidentes y contaminación atmosférica y son opciones de baja emisión de carbono.</div>
+        <div class="texto5">La energía segura es la disponibildad de suministro de energía eléctrica fiable y confiable para el uso diario. Esto incluye la seguridad de las instalaciones de energía y la protección contra interrupciones o fallas del sistema.
+            La energía nuclear, la eólica, la hidroeléctrica y especialmente la solar, son alguos ejemplos de energía segura.</div>
         <div><img  class="n" src="en.webp" alt=""></div>
         <div><img class="e" src="ee.jpg" alt=""></div>
         <div><img class="he" src="ehe.webp" alt=""></div>
