--- a/Pagina3.html
+++ b/Pagina3.html
@@ -41,6 +41,7 @@
             del planeta. En Francia, la compañía Sweetch Energy planea inaugurar la primera planta osmótica del país y producir 4 TWh de energía, el 
             equivalente a la cuarta parte de la electricidad consumida por Sevilla y Zaragoza en un año.
         </div>
+        <img src="Que-es-la-energia-osmotica.jpg">
 
     </div>
     <div class="enlaces">Enlaces</div>
