--- a/index.html
+++ b/index.html
@@ -60,5 +60,9 @@
     </div>
     <div class="enlaces">
         <a href="https://es.wikipedia.org/wiki/Energ%C3%ADa_renovable" target="blank"><img src="Wikipedia.png" class=Wikipedia_logo></a>
+        <a href="https://www.sistemaelectrico-ree.es/informe-de-energias-renovables" target="_blank"><img src="ree.png" class="Ree_logo"></a>
+        <a href="https://www.irena.org/Energy-Transition/Outlook" target="_blank"><img src="irena.png" class="irena_logo"></a>
+        <a href="https://www.ucsusa.org/energy" target="_blank"><img src="UCS.png" class="ucs_logo"></a>
+        <a href="https://www.un.org/sustainabledevelopment/es/energy/" target="_blank"><img src="energia asequible.png" class="asequible_logo"></a>
     </div>
 </body>
