--- a/Pagina3-2.html
+++ b/Pagina3-2.html
@@ -38,7 +38,6 @@
             El potencial de esta tecnología es muy grande siempre que se puedan salvar las restricciones del espacio aéreo para no interferir con el 
             tráfico de aviones.
         </div>
-        <div>Parrafo 3</div>
-    </div>
+        <img src="turbina heolica.jpg">
     <div class="enlaces">Enlaces</div>
 </body>
