--- a/Pagina3-1.html
+++ b/Pagina3-1.html
@@ -36,7 +36,7 @@
             a tierra por la planta. El rendimiento del sistema es bajo, ya que se necesita un metro cuadrado de plantas para generar 0.4 watts. 
             Es decir, para abastecer de energía una casa que consuma unos 2.900 kWh al año serían necesarios 100 m2 de Plant-e.
         </div>
-        <img src="Captura de pantalla de 2023-02-02 12-36-47.png">
+        <img class="P3" src="Captura de pantalla de 2023-02-02 12-36-47.png">
         
     </div>
     <div class="enlaces">Enlaces</div>
