--- a/Pagina5.html
+++ b/Pagina5.html
@@ -31,5 +31,10 @@
         <div><img class="e" src="ee.jpg" alt=""></div>
         <div><img class="he" src="ehe.webp" alt=""></div>
     </div>
-    <div class="enlaces">Enlaces</div>
+    <div class="enlaces">
+        <a href="https://www.sistemaelectrico-ree.es/informe-de-energias-renovables" target="_blank"><img src="ree.png" class="Ree_logo"></a>
+        <a href="https://www.irena.org/Energy-Transition/Outlook" target="_blank"><img src="irena.png" class="irena_logo"></a>
+        <a href="https://www.ucsusa.org/energy" target="_blank"><img src="UCS.png" class="ucs_logo"></a>
+        <a href="https://www.un.org/sustainabledevelopment/es/energy/" target="_blank"><img src="energia asequible.png" class="asequible_logo"></a>
+    </div>
 </body>
