--- a/Pagina6.html
+++ b/Pagina6.html
@@ -63,5 +63,9 @@
         <a href="https://www.appa.es/la-energia-en-espana/produccion-nacional-y-autoabastecimiento/" target="blank"><img src="Transportar.png" class="Transportar_logo"></a>
         <a href="https://www.uoc.edu/portal/es/news/entrevistes/2022/032-antonio-turiel.html" target="_blank"><img src="Periodico.png" class="Periodico_logo"></a>
         <a href="https://theconversation.com/aumentan-las-renovables-el-riesgo-de-apagones-en-la-red-electrica-179729" target="_blank"><img src="Fiabilidad.png" class="Fiabilidad_logo"></a>
+        <a href="https://www.sistemaelectrico-ree.es/informe-de-energias-renovables" target="_blank"><img src="ree.png" class="Ree_logo"></a>
+        <a href="https://www.irena.org/Energy-Transition/Outlook" target="_blank"><img src="irena.png" class="irena_logo"></a>
+        <a href="https://www.ucsusa.org/energy" target="_blank"><img src="UCS.png" class="ucs_logo"></a>
+        <a href="https://www.un.org/sustainabledevelopment/es/energy/" target="_blank"><img src="energia asequible.png" class="asequible_logo"></a>
     </div>
 </body>
