--- a/Pagina3-2.html
+++ b/Pagina3-2.html
@@ -38,7 +38,7 @@
             El potencial de esta tecnología es muy grande siempre que se puedan salvar las restricciones del espacio aéreo para no interferir con el 
             tráfico de aviones.
         </div>
-        <img src="turbina heolica.jpg">
+        <img class="P3" src="turbina heolica.jpg">
     <div class="enlaces">
         <a href="https://www.sistemaelectrico-ree.es/informe-de-energias-renovables" target="_blank"><img src="ree.png" class="Ree_logo"></a>
         <a href="https://www.irena.org/Energy-Transition/Outlook" target="_blank"><img src="irena.png" class="irena_logo"></a>
