--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="titulo"><p>ENERGÍA ASEQUIBLE Y NO CONTAMINANTE</p></div>
     <div class="indice">
-        <a href="index.html">Indice</a>
+        <a href="index.html" class="Espacios">Indice</a>
         <a href="Pagina1.html" class="Espacios">Un futuro sin energias renovables</a>
         
         <a href="Pagina2.html" class="Espacios">Acceso a la energía</a>
