--- a/Pagina3-1.html
+++ b/Pagina3-1.html
@@ -35,7 +35,7 @@
             La idea es crear un sistema eléctrico ecológico que obtenga energía directamente de las plantas. Una de las pioneras en este ámbito es 
             la empresa belga Plant-e. Han desarrollado un sistema capaz de generar electricidad sin dañar las plantas. 
         </div>
-        <div>Funciona mediante un circuito de cubetas con agua que se instalan bajo la planta, donde unos electrodos capturan los electrones liberados por los microorganismos expulsados 
+        <div class="texto3" >Funciona mediante un circuito de cubetas con agua que se instalan bajo la planta, donde unos electrodos capturan los electrones liberados por los microorganismos expulsados 
             a tierra por la planta. El rendimiento del sistema es bajo, ya que se necesita un metro cuadrado de plantas para generar 0.4 watts. 
             Es decir, para abastecer de energía una casa que consuma unos 2.900 kWh al año serían necesarios 100 m2 de Plant-e.
         </div>
