--- a/Pagina3-2.html
+++ b/Pagina3-2.html
@@ -37,7 +37,7 @@
             turbinas voladoras-de tipo dron o globo aerostático- situadas a una altura de unos 2km para aprovechar mejor las corrientes de aire.
         </div>
         
-        <div>Según calculan los expertos, los vientos en este rango de altura son hasta 20 veces más potentes que los que captan los aerogeneradores 
+        <div class="texto3" >Según calculan los expertos, los vientos en este rango de altura son hasta 20 veces más potentes que los que captan los aerogeneradores 
             convencionales. Estas mini centrales eólicas podrían transferir la electricidad a través de nanotubos o bien, de forma inalámbrica. 
             El potencial de esta tecnología es muy grande siempre que se puedan salvar las restricciones del espacio aéreo para no interferir con el 
             tráfico de aviones.
