--- a/Pagina3.html
+++ b/Pagina3.html
@@ -29,13 +29,13 @@
     <div class="enunciado_4">Ósmosis o energía azul</div>
     <div class="Parrafo_3">
 
-        <div class="Texto_3">
+        <div class="texto3">
             La energía osmótica o energía azul se basa, como su nombre indica, en la osmosis. Y para obtenerla, solo se necesita agua, sal y 
             una membrana permeable. ¿Pero qué es la ósmosis? Pues es un fenómeno natural entre dos líquidos con diferente concentración salina, 
             que intercambian moléculas a través de una membrana.
         </div>
 
-        <div class="Texto_3">
+        <div class="texto3">
             El proceso funciona de la siguiente manera: colocamos en dos tanques una masa de agua dulce y otra de agua salada, 
             separados por una membrana porosa. La osmosis hará que el agua dulce pase a través de la membrana al lado del agua salada, 
             aumentando el volumen y la presión. Esto mueve una turbina que, a continuación, genera electricidad. El potencial de este tipo de energía 
